@@ -1,0 +1,11 @@
+--liquibase formatted sql
+--changeset ghajba:changelog-initial
+CREATE TABLE VEHICLE (ID NUMBER NOT NULL, LICENSE_PLATE VARCHAR(30) NOT NULL, VIN VARCHAR(30) NOT NULL, LICENSE_EXPIRES DATE NOT NULL, CAPACITY NUMBER NOT NULL, CURB_WEIGHT NUMBER NOT NULL, GROSS_WEIGHT NUMBER NOT NULL, MANUFACTURER_NAME VARCHAR(50) NOT NULL, MODEL VARCHAR(255), COLOR VARCHAR(255), CONSTRAINT PK_VEHICLE PRIMARY KEY (ID));
+
+CREATE TABLE DRIVER (ID NUMBER NOT NULL, NAME VARCHAR(255) NOT NULL, DRIVING_LICENCE_NUMBER VARCHAR(30) NOT NULL, DRIVING_LICENCE_EXPIRES DATE NOT NULL, DRIVING_LICENCE_CATEGORY VARCHAR(30) NOT NULL, CONSTRAINT PK_DRIVER PRIMARY KEY (ID));
+
+CREATE TABLE ROUTE (ID NUMBER NOT NULL, CITY_FROM VARCHAR(255) NOT NULL, CITY_TO VARCHAR(255) NOT NULL, DISTANCE NUMBER NOT NULL, CONSTRAINT PK_ROUTE PRIMARY KEY (ID));
+
+CREATE TABLE SHIPPING_NOTE (ID NUMBER NOT NULL, VEHICLE_ID NUMBER NOT NULL, DRIVER_ID NUMBER NOT NULL, ROUTE_ID NUMBER NOT NULL, SHIPPING_START TIMESTAMP NOT NULL, SHIPPING_END TIMESTAMP NOT NULL, CARGO_WEIGHT NUMBER NOT NULL, CARGO_DESCRIPTION VARCHAR(255) NOT NULL, CONSTRAINT PK_SHIPPING_NOTE PRIMARY KEY (ID));
+
+CREATE TABLE USER (ID NUMBER NOT NULL, NAME VARCHAR(255) NOT NULL, LOGIN VARCHAR(30) NOT NULL, PASSWORD VARCHAR(30) NOT NULL, E_MAIL_ADDRESS VARCHAR(255) NOT NULL, CONSTRAINT PK_USER PRIMARY KEY (ID));
