@@ -1,0 +1,117 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://www.liquibase.org/xml/ns/dbchangelog http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-2.0.xsd">
+	
+	<changeSet author="ghajba" id="variations-initial">
+		<comment>Create the initial database schema</comment>
+		
+		<createTable tableName="VEHICLE">
+			<column name="ID" type="NUMERIC">
+				<constraints nullable="false" primaryKey="true" primaryKeyName="PK_VEHICLE" />
+			</column>
+			<column name="LICENSE_PLATE" type="VARCHAR(30)">
+				<constraints nullable="false" />
+			</column>
+			<column name="VIN" type="VARCHAR(30)">
+				<constraints nullable="false" />
+			</column>
+			<column name="LICENSE_EXPIRES" type="DATE">
+				<constraints nullable="false" />
+			</column>
+			<column name="CAPACITY" type="NUMERIC">
+				<constraints nullable="false" />
+			</column>
+			<column name="CURB_WEIGHT" type="NUMERIC">
+			<constraints nullable="false" />
+			</column>
+			<column name="GROSS_WEIGHT" type="NUMERIC">
+				<constraints nullable="false" />
+			</column>
+			<column name="MANUFACTURER_NAME" type="VARCHAR(50)">
+				<constraints nullable="false" />
+			</column>
+			<column name="MODEL" type="VARCHAR(255)" />
+			<column name="COLOR" type="VARCHAR(255)" />
+		</createTable>
+		
+		<createTable tableName="DRIVER">
+			<column name="ID" type="NUMERIC">
+				<constraints nullable="false" primaryKey="true" primaryKeyName="PK_DRIVER" />
+			</column>
+			<column name="NAME" type="VARCHAR(255)">
+				<constraints nullable="false" />
+			</column>
+			<column name="DRIVING_LICENCE_NUMBER" type="VARCHAR(30)">
+				<constraints nullable="false" />
+			</column>
+			<column name="DRIVING_LICENCE_EXPIRES" type="DATE">
+				<constraints nullable="false" />
+			</column>
+			<column name="DRIVING_LICENCE_CATEGORY" type="VARCHAR(30)">
+				<constraints nullable="false" />
+			</column>
+		</createTable>
+		
+		<createTable tableName="ROUTE">
+			<column name="ID" type="NUMERIC">
+				<constraints nullable="false" primaryKey="true" primaryKeyName="PK_ROUTE" />
+			</column>
+			<column name="CITY_FROM" type="VARCHAR(255)">
+				<constraints nullable="false" />
+			</column>
+			<column name="CITY_TO" type="VARCHAR(255)">
+				<constraints nullable="false" />
+			</column>
+			<column name="DISTANCE" type="NUMERIC">
+				<constraints nullable="false" />
+			</column>
+		</createTable>
+		
+		<createTable tableName="SHIPPING_NOTE">
+			<column name="ID" type="NUMERIC">
+				<constraints nullable="false" primaryKey="true" primaryKeyName="PK_SHIPPING_NOTE" />
+			</column>
+			<column name="VEHICLE_ID" type="NUMERIC">
+				<constraints nullable="false" />
+			</column>
+			<column name="DRIVER_ID" type="NUMERIC">
+				<constraints nullable="false" />
+			</column>
+			<column name="ROUTE_ID" type="NUMERIC">
+				<constraints nullable="false" />
+			</column>
+			<column name="SHIPPING_START" type="TIMESTAMP">
+				<constraints nullable="false" />
+			</column>
+			<column name="SHIPPING_END" type="TIMESTAMP">
+				<constraints nullable="false" />
+			</column>
+			<column name="CARGO_WEIGHT" type="NUMERIC">
+				<constraints nullable="false" />
+			</column>
+			<column name="CARGO_DESCRIPTION" type="VARCHAR(255)">
+				<constraints nullable="false" />
+			</column>
+		</createTable>
+		
+		<createTable tableName="USER">
+			<column name="ID" type="NUMERIC">
+				<constraints nullable="false" primaryKey="true" primaryKeyName="PK_USER" />
+			</column>
+			<column name="NAME" type="VARCHAR(255)">
+				<constraints nullable="false" />
+			</column>
+			<column name="LOGIN" type="VARCHAR(30)">
+				<constraints nullable="false" />
+			</column>
+			<column name="PASSWORD" type="VARCHAR(30)">
+				<constraints nullable="false" />
+			</column>
+			<column name="E_MAIL_ADDRESS" type="VARCHAR(255)">
+				<constraints nullable="false" />
+			</column>
+		</createTable>
+
+	</changeSet>
+
+</databaseChangeLog>
