@@ -1,6 +1,11 @@
 ChangeLog
 ==========
 
+2013-05-10
+-----------
+ * Added sample database changesets to http://hahamo.wordpress.com/2013/05/10/liquibase-change-sets/
+
+==========
 2013-04-10
 -----------
  * Added file 001_Lets_get_started.rar containig the examples to http://hahamo.wordpress.com/2013/01/12/lets-get-started/
